# force-graph

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
src/components/: graph.rs  mod.rs
